--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF"> 
     <meta name="viewport" content="widt=device-width, initial-scale=1.0">
     <title> Segundo projeto</title>
-    <link rel="stylessheet" href="style.css">
+    <link rel="stylessheet" href="assets/css/style.css">
 </head>
 </body>
 </body>
