--- a/segundo-2-main/index.html
+++ b/segundo-2-main/index.html
@@ -6,12 +6,16 @@
     <link rel="stylessheet" href="assets/css/style.css">
 </head>
 </body>
-    <header class="cabecalho"></header>
+    <header class="cabecalho">
+        <div class="container">
+            <span class="menu-hamburguer"></span><img src="assets/img/AluraBooks/Logo.svg" alt="cabecalho">
+        </div>
         <span class="menu-hamburguer"></span>
         <img src="assets/img/AluraBooks/Logo.svg" alt="">
         <a href="#"></a> <img src="assets/img/AluraBooks/Compras.svg">
-        <a href=""
-        <a href="#"></a> <img src="assets/img/AluraBooks/Favoritos.svg"
+        <a href="#"></a> <img src="assets/img/AluraBooks/compras.svg">
+        <a href="#"></a> <img src="assets/img/AluraBooks/Favoritos.svg">
     </header>
+
 </body>
 </html>
